# WorldBuilder

./: .gitignore  .prompt_history  pyproject.toml  test.py
world_builder/: chatgpt_cli.py  cli.py  config.py  context.py  graph_registry.py  map.py  map_data_interface.py  models.py  project.py  settings.py  table.py
world_builder/context/: __init__.py  base.py  engine.py
world_builder/context/engines/: feb2024.py  mar2024.py
world_builder/map_metadata/MiniWorldSprites/: mapdata.tiled-session
world_builder/map_metadata/MiniWorldSprites/maps/: default.tmx
world_builder/map_metadata/MiniWorldSprites/tilesets/: Shore.tsx  TexturedGrass.tsx
world_builder/map_metadata_templates/MiniWorldSprites/: map.tmx
world_builder/map_metadata_templates/MiniWorldSprites/tilesets/: Shore.tsx  TexturedGrass.tsx
world_builder/scratch/: test_chat_completion.py  test_context_creation.py  test_generation.py  test_gstk_update.py  test_map_creation.py  test_map_hierarchy.py  test_map_tree.py  test_prompt_runtimes.py  test_single_tile_creation.py  test_tree_neighbors.py
