[tool.poetry]
name = "worldbuilder"
version = "0.1.0"
description = ""
authors = ["Justin McOmie <justin.mcomie@gmail.com>"]
readme = "README.md"
packages = [{include = "world_builder"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pygame-ce = "^2.4.0"
gstk = {path = "../../GenerativeStoryToolkit", develop = true}
pyinquirer = "^1.0.3"
pytmx = "^3.32"
langchain-experimental = "^0.0.50"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
world_builder = "world_builder.cli:main"

