[tool.poetry]
name = "worldbuilder"
version = "0.1.0"
description = ""
authors = ["Justin McOmie <justin.mcomie@gmail.com>"]
readme = "README.md"
packages = [{include = "world_builder"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pygame-ce = "^2.4.0"
gstk = {path = "../../GenerativeStoryToolkit", develop = true}
pytmx = "^3.32"
#langchain-experimental = "^0.0.50"
#devtools = "^0.12.2"
click = "^8.1.1"
inquirerpy = "^0.3.4"
nest-asyncio = "^1.6.0"
platformdirs = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
world_builder = "world_builder.cli:main"

